do ne do